<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu items -->
    <string name="refresh">Refresh</string>

    <!-- NetworkActivity -->
    <string name="page_title">HealthNow News Feed</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="app_name">HealthNow</string>
    <string name="drawer_open">Choose An Option</string>
    <string name="drawer_close">HealthNow</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Diet</item>
        <item>Exercise</item>
        <item>Medication</item>
        <item>Vital Signs</item>
        <item>Reports</item>
        <item>Logoff</item>
    </string-array>

    <!-- Navigation Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_diet</item>
        <item>@drawable/ic_exercise</item>
        <item>@drawable/ic_medication</item>
        <item>@drawable/ic_vital_signs</item>
        <item>@drawable/ic_reports</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Exercise List -->
    <string-array name="exercise_list">
        <item>Running</item>
        <item>Cycling</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">HealthNow</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_diet_main">DietMainActivity</string>
    <string name="string_weight">Weight(LB)</string>
    <string name="string_search_recipes">Search Recipes</string>
    <string name="diet_save">Save Calories</string>
    <string name="string_calorie_counter">0</string>
    <string name="string_breakfast_counter">0</string>
    <string name="string_lunch_counter">0</string>
    <string name="string_dinner_counter">0</string>
    <string name="string_dinner">Dinner</string>
    <string name="string_calories">CALORIES</string>
    <string name="string_breakfast">Breakfast</string>
    <string name="string_lunch">Lunch</string>
    <string name="string_BMI">BMI</string>
    <string name="string_weight_counter">0</string>
    <string name="string_height">Height(IN)</string>
    <string name="string_BMI_counter">0</string>
    <string name="string_height_counter">0</string>
    <string name="string_saved_recipes">Saved Recipes</string>
    <string name="description">Menu Prefs</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="title_activity_next">Diet</string>
    <string name="title_activity_preference">Diet Preferences</string>
    <string name="title_activity_search_exercise">searchExercise</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="key">Enter Keyword</string>
    <string name="search_title">Health Now</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="title_reporting_activity">Report</string>
    <string name="title_activity_medication_report">MedicationReportActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="recipientEmail">Recipient Email</string>

    <!-- Vital Signs -->

    <string name="string_heart_rate">Heart Rate</string>
    <string name="string_blood_pressure">Blood Pressure</string>
    <string name="string_glucose_level">Glucose Level</string>
    <string name="string_blood_pressure_count">0</string>
    <string name="string_heart_rate_count">0</string>
    <string name="string_glucose_level_count">0</string>
    <string name="start_heartrate_monitor">Start HeartRate Monitor</string>
    <string name="string_cholesterol_count">0</string>
	<string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="dialog_message">Test</string>
    <string name="dialog_title">Test</string>
    
    
    
</resources>